# hwp-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/hwp-cli/: Cargo.toml
crates/hwp-cli/src/: main.rs
crates/hwp-cli/src/commands/: cat.rs  convert.rs  diff.rs  edit.rs  mcp.rs  mod.rs  new.rs  render.rs
crates/hwp-cli/tests/: cli.rs
crates/hwp-convert/src/: bookmark.rs  field.rs  format.rs  from_markdown.rs  gso.rs  image.rs  lib.rs  structure.rs
crates/hwp-model/src/: control.rs  document.rs  header.rs  ids.rs  lib.rs  opaque.rs  paragraph.rs  text.rs
crates/hwp-render/: Cargo.toml
crates/hwp-render/src/: display.rs  equation.rs  error.rs  fonts.rs  footnote.rs  layout.rs  lib.rs  lineseg.rs  list.rs  pdf.rs  png.rs  shape.rs  shape_draw.rs  svg.rs  tab.rs
crates/hwp-render/tests/: pdf.rs  pdf_cff.rs  render.rs
crates/hwp5/: Cargo.toml
crates/hwp5/src/: body_text.rs  doc_info.rs  lib.rs  read.rs  write.rs
crates/hwp5/src/codec/: reader.rs
crates/hwp5/tests/: extract.rs  identity.rs  roundtrip.rs  synth.rs
crates/hwp5/tests/snapshots/: extract__text_hello_world.snap  extract__text_work_report.snap
crates/hwpx/src/read/: header.rs  section.rs  xml.rs
crates/hwpx/src/write/: section.rs
crates/hwpx/tests/: read.rs  write.rs
docs/: 실기검증-체크리스트.md
docs/design/: 00-overview.md  01-architecture-ir.md  02-hwp5-read.md  03-hwp5-write.md  04-hwpx-owpml.md  05-rendering.md  06-convert-cli-methodology.md  07-hangul-compat-rules.md  08-external-research.md
fixtures/: README.md
tools/: diff_pyhwp.sh  gen_verification_set.sh
