[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
# 내부 크레이트
hwp-model = { path = "crates/hwp-model" }
hwp5 = { path = "crates/hwp5" }
hwpx = { path = "crates/hwpx" }
hwp-convert = { path = "crates/hwp-convert" }
hwp-render = { path = "crates/hwp-render" }

# 공용 외부 의존성
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
cfb = "0.14"
flate2 = "1"
quick-xml = "0.40"
zip = "8"

# 렌더링
tiny-skia = "0.12"
rustybuzz = "0.20"
fontdb = "0.23"

# 테스트 전용
insta = { version = "1", features = ["json"] }
proptest = "1"

[profile.release]
lto = "thin"
