[package]
name = "hwp-cli"
description = "HWP/HWPX 문서 처리 CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hwp"
path = "src/main.rs"

[dependencies]
hwp-model = { workspace = true }
hwp5 = { workspace = true }
hwpx = { workspace = true }
hwp-convert = { workspace = true }
hwp-render = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
