[package]
name = "hwp-render"
description = "IR → PNG/SVG/PDF 페이지 렌더러"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hwp-model = { workspace = true }
tiny-skia = { workspace = true }
rustybuzz = { workspace = true }
fontdb = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
pdf-writer = { workspace = true }
subsetter = { workspace = true }

[dev-dependencies]
hwp5 = { workspace = true }
hwpx = { workspace = true }
hwp-convert = { workspace = true }
